[gd_scene load_steps=16 format=3 uid="uid://b725rf5f38vdo"]

[ext_resource type="PackedScene" uid="uid://c7lgorhb62ah1" path="res://Hearts.tscn" id="1_4sxdb"]
[ext_resource type="Script" path="res://main.gd" id="1_ksrux"]
[ext_resource type="Script" path="res://Game.gd" id="1_ysi01"]
[ext_resource type="Texture2D" uid="uid://yxiewluvw5hi" path="res://assets/icons.png" id="2_t7xfp"]
[ext_resource type="Script" path="res://NetCode.gd" id="2_x4vic"]
[ext_resource type="Script" path="res://Lobby.gd" id="3_bw8dh"]
[ext_resource type="Texture2D" uid="uid://bhwiobg1kp48m" path="res://assets/10 sprites/Base.png" id="5_x8vou"]
[ext_resource type="Texture2D" uid="uid://t1camr4plg17" path="res://assets/10 sprites/Wheel.png" id="8_pdj8j"]
[ext_resource type="PackedScene" uid="uid://dgh2docfd8jc6" path="res://one.tscn" id="9_1ctqg"]
[ext_resource type="Theme" uid="uid://cxkwgo7u3blha" path="res://defalt.tres" id="9_f5u62"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tm5qn"]
atlas = ExtResource("2_t7xfp")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4oe1"]
atlas = ExtResource("2_t7xfp")
region = Rect2(0, 20, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_aovd6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm5qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4oe1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_62kyl"]
resource_name = "number idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlyrChoice:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(409, -20), Vector2(409, 0), Vector2(409, -20), Vector2(409, 0), Vector2(409, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OpntChoice:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(634, -20), Vector2(634, 0), Vector2(634, -20), Vector2(634, 0), Vector2(634, -20)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yepgp"]
_data = {
"number idle": SubResource("Animation_62kyl")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_ksrux")
metadata/_edit_horizontal_guides_ = [265.0, 142.0]
metadata/_edit_lock_ = true

[node name="NetCode" type="Node2D" parent="."]
script = ExtResource("2_x4vic")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1169.0
offset_bottom = 664.0
mouse_filter = 2
color = Color(0.0666667, 0.00784314, 0.00392157, 1)
metadata/_edit_lock_ = true

[node name="Lobby" type="Node2D" parent="."]
visible = false
script = ExtResource("3_bw8dh")

[node name="Users" type="ItemList" parent="Lobby"]
offset_left = 266.0
offset_top = 110.0
offset_right = 870.0
offset_bottom = 461.0
theme_override_font_sizes/font_size = 20

[node name="Title" type="Label" parent="Lobby"]
offset_left = 463.0
offset_top = 24.0
offset_right = 642.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 50
text = "Lobby"
horizontal_alignment = 1

[node name="Desc" type="Label" parent="Lobby"]
offset_left = 69.0
offset_top = 518.0
offset_right = 248.0
offset_bottom = 596.0
theme_override_font_sizes/font_size = 40
text = "name:"
horizontal_alignment = 1

[node name="Register" type="Button" parent="Lobby"]
offset_left = 894.0
offset_top = 518.0
offset_right = 1029.0
offset_bottom = 589.0
theme_override_font_sizes/font_size = 30
text = "Register"

[node name="Username" type="TextEdit" parent="Lobby"]
offset_left = 260.0
offset_top = 521.0
offset_right = 865.0
offset_bottom = 582.0
theme_override_font_sizes/font_size = 30
scroll_fit_content_height = true

[node name="Challenge" type="Button" parent="Lobby"]
offset_left = 904.0
offset_top = 264.0
offset_right = 1053.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 30
text = "Challenge"

[node name="Accept" type="Button" parent="Lobby"]
offset_left = 85.0
offset_top = 264.0
offset_right = 234.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 30
text = "Accept"

[node name="Menu" type="Node2D" parent="."]
visible = false

[node name="Play" type="MenuButton" parent="Menu"]
offset_left = 408.0
offset_top = 348.0
offset_right = 722.0
offset_bottom = 557.0
theme_override_colors/font_hover_color = Color(0.160784, 0.737255, 0.584314, 1)
theme_override_font_sizes/font_size = 100
text = "PLAY"
switch_on_hover = true

[node name="Title" type="RichTextLabel" parent="Menu"]
offset_left = 182.0
offset_top = 91.0
offset_right = 1014.0
offset_bottom = 335.0
theme_override_font_sizes/normal_font_size = 150
text = "ONE ZERO"

[node name="Game" type="Node2D" parent="."]
script = ExtResource("1_ysi01")
metadata/_edit_lock_ = true

[node name="Info" type="Node2D" parent="Game"]
metadata/_edit_lock_ = true

[node name="background" type="Sprite2D" parent="Game/Info"]
position = Vector2(574, 286)
scale = Vector2(5.76, 5.76)
texture = ExtResource("5_x8vou")

[node name="Turn" type="Label" parent="Game/Info"]
offset_left = 423.0
offset_top = 21.0
offset_right = 742.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 40
text = "Turn 1"
horizontal_alignment = 1

[node name="Outcome" type="Label" parent="Game/Info"]
offset_left = 444.0
offset_top = 135.0
offset_right = 706.0
offset_bottom = 254.0
theme_override_font_sizes/font_size = 40
text = "Player
Blocked!"
horizontal_alignment = 1

[node name="PlyrName" type="Label" parent="Game/Info"]
offset_left = -68.0
offset_top = -6.0
offset_right = 251.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0.976471, 0.866667, 0.862745, 1)
theme_override_font_sizes/font_size = 40
text = "Player"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlyrPrevLabel" type="Label" parent="Game/Info"]
offset_left = 346.0
offset_top = 307.0
offset_right = 478.0
offset_bottom = 345.0
theme_override_font_sizes/font_size = 25
text = "previous:"
horizontal_alignment = 1

[node name="PlyrPrev" type="Label" parent="Game/Info"]
offset_left = 343.0
offset_top = 328.0
offset_right = 481.0
offset_bottom = 408.0
theme_override_font_sizes/font_size = 55
text = "0"
horizontal_alignment = 1

[node name="PlyrChoice" type="Label" parent="Game/Info"]
offset_left = 409.0
offset_top = -20.0
offset_right = 531.0
offset_bottom = 188.0
theme_override_colors/font_color = Color(0, 0.694118, 1, 1)
theme_override_font_sizes/font_size = 150
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlyrInfo" type="Label" parent="Game/Info"]
offset_left = 37.0
offset_top = 265.0
offset_right = 361.0
offset_bottom = 368.0
theme_override_font_sizes/font_size = 50
text = "Locked In"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlyrAttacking" type="Label" parent="Game/Info"]
offset_left = 295.0
offset_top = 271.0
offset_right = 614.0
offset_bottom = 364.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Attacking"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlyrHp" parent="Game/Info" instance=ExtResource("1_4sxdb")]
position = Vector2(45, 592)
scale = Vector2(1, 1)

[node name="PlyrAtkIcon" type="AnimatedSprite2D" parent="Game/Info"]
visible = false
position = Vector2(416, 226)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_aovd6")
frame = 1

[node name="OpntChoice" type="Label" parent="Game/Info"]
offset_left = 634.0
offset_top = -20.0
offset_right = 750.0
offset_bottom = 188.0
theme_override_colors/font_color = Color(0.764706, 0, 0, 1)
theme_override_font_sizes/font_size = 150
text = "0"
horizontal_alignment = 1

[node name="OpntInfo" type="Label" parent="Game/Info"]
offset_left = 793.0
offset_top = 270.0
offset_right = 1117.0
offset_bottom = 373.0
theme_override_font_sizes/font_size = 50
text = "Locked In"
horizontal_alignment = 1

[node name="OpntName" type="Label" parent="Game/Info"]
offset_left = 797.0
offset_top = -11.0
offset_right = 1116.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(0.976471, 0.866667, 0.862745, 1)
theme_override_font_sizes/font_size = 40
text = "Opponent"
horizontal_alignment = 2

[node name="OpntPrevLabel" type="Label" parent="Game/Info"]
offset_left = 689.0
offset_top = 307.0
offset_right = 821.0
offset_bottom = 345.0
theme_override_font_sizes/font_size = 25
text = "previous:"
horizontal_alignment = 1

[node name="OpntPrev" type="Label" parent="Game/Info"]
offset_left = 684.0
offset_top = 327.0
offset_right = 822.0
offset_bottom = 407.0
theme_override_font_sizes/font_size = 55
text = "0"
horizontal_alignment = 1

[node name="OpntAttacking" type="Label" parent="Game/Info"]
offset_left = 542.0
offset_top = 278.0
offset_right = 861.0
offset_bottom = 371.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Defending"
horizontal_alignment = 1

[node name="OpntHp" parent="Game/Info" instance=ExtResource("1_4sxdb")]
position = Vector2(697, 583)
scale = Vector2(1, 1)

[node name="Wheel" type="Sprite2D" parent="Game/Info"]
position = Vector2(572.5, 396.5)
scale = Vector2(1.40625, 1.40625)
texture = ExtResource("8_pdj8j")

[node name="OpntAtkIcon" type="AnimatedSprite2D" parent="Game/Info"]
visible = false
position = Vector2(758, 221)
sprite_frames = SubResource("SpriteFrames_aovd6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game/Info"]
autoplay = "number idle"
libraries = {
"": SubResource("AnimationLibrary_yepgp")
}

[node name="Controls" type="Node2D" parent="Game"]
metadata/_edit_lock_ = true

[node name="LockIn" type="Button" parent="Game/Controls"]
offset_left = 448.0
offset_top = 540.0
offset_right = 705.0
offset_bottom = 676.0
theme = ExtResource("9_f5u62")
theme_override_colors/font_color = Color(0.976471, 0.866667, 0.862745, 1)
theme_override_font_sizes/font_size = 50
text = "Lock In"

[node name="Zero" type="Button" parent="Game/Controls"]
offset_left = 280.0
offset_top = 358.0
offset_right = 351.0
offset_bottom = 435.0
theme = ExtResource("9_f5u62")
theme_override_font_sizes/font_size = 50
text = "0
"

[node name="$$$" type="Button" parent="Game/Controls"]
offset_left = 855.0
offset_top = 551.0
offset_right = 1149.0
offset_bottom = 638.0
theme_override_font_sizes/font_size = 25
text = "Buy Platium Tokens"

[node name="One" parent="Game/Controls" instance=ExtResource("9_1ctqg")]
offset_left = 17.0
offset_top = 334.0
offset_right = 147.0
offset_bottom = 470.0

[connection signal="challenge_user_response" from="NetCode" to="Lobby" method="_on_net_code_challenge_user_response"]
[connection signal="load_match_response" from="NetCode" to="Game" method="_on_net_code_load_match_response"]
[connection signal="lock_in_response" from="NetCode" to="Game" method="_on_net_code_lock_in_response"]
[connection signal="register_response" from="NetCode" to="Lobby" method="_on_net_code_register_response"]
[connection signal="users_response" from="NetCode" to="Lobby" method="_on_net_code_users_response"]
[connection signal="challenge_user" from="Lobby" to="NetCode" method="_on_lobby_challenge_user"]
[connection signal="load_users" from="Lobby" to="NetCode" method="_on_lobby_load_users"]
[connection signal="register" from="Lobby" to="NetCode" method="_on_lobby_register"]
[connection signal="start_match" from="Lobby" to="." method="_on_lobby_start_match"]
[connection signal="pressed" from="Lobby/Register" to="Lobby" method="_on_register_pressed"]
[connection signal="pressed" from="Lobby/Challenge" to="Lobby" method="_on_challenge_pressed"]
[connection signal="pressed" from="Lobby/Accept" to="Lobby" method="_on_accept_pressed"]
[connection signal="pressed" from="Menu/Play" to="." method="_on_play_pressed"]
[connection signal="load_match" from="Game" to="NetCode" method="_on_game_load_match"]
[connection signal="lock_in" from="Game" to="NetCode" method="_on_game_lock_in"]
[connection signal="pressed" from="Game/Controls/LockIn" to="Game" method="_on_lock_in_pressed"]
[connection signal="pressed" from="Game/Controls/Zero" to="Game" method="_on_zero_pressed"]
[connection signal="pressed" from="Game/Controls/One" to="Game" method="_on_one_pressed"]
